--- a/templates/description.html
+++ b/templates/description.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/style.css">
     <title>Beschreibung der Freundin</title>
+    <script src="//code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js" integrity="sha512-2RDFHqfLZW8IhPRvQYmK9bTLfj/hddxGXQAred2wNZGkrKQkLGj8RCkXfRJPHlDerdHHIzTFaahq4s/P4V6Qig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready(function() {
+            const socket = io('');
+
+            socket.on('connect', function() {
+                socket.send('Description page connected!');
+            });
+            socket.on('calibration', function () {
+                window.location.href = "/calibration";
+                return false;
+            })
+
+            $('button#next').click(function () {
+                socket.emit('calibration');
+                return false;
+            });
+        });
+    </script>
 </head>
 <body>
 <div class="banner">
@@ -19,7 +39,7 @@
         stets Bio-Produkte zu kaufen. Da sie jedoch nicht sonderlich viel Geld zur Verfügung hat, achtet sie beim
         Einkaufen auch immer auf den Preis der Artikel, die sie kauft.
     </article>
-    <button class = "startButton" id="start" type="button">Weiter</button> <br>
+    <button class = "startButton" id="next" type="button">Weiter</button> <br>
 </div>
 </body>
 </html>
