--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/style.css">
     <title>Studie über das Kaufverhalten in Onlineshops</title>
+    <script src="//code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js" integrity="sha512-2RDFHqfLZW8IhPRvQYmK9bTLfj/hddxGXQAred2wNZGkrKQkLGj8RCkXfRJPHlDerdHHIzTFaahq4s/P4V6Qig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" charset="utf-8">
+
+        $(document).ready(function() {
+            var socket = io();
+
+            socket.on('connect', function() {
+                socket.send('Index page connected!');
+            });
+            socket.on('consent', function () {
+                window.location.href = "/consent";
+                return false;
+            })
+
+            $('button#start').click(function () {
+                if($('#pID').val().length !== 0){
+                        socket.emit('consent');
+                        return false;
+                }
+            });
+        });
+    </script>
 </head>
 <body>
 <div class="banner">
@@ -14,7 +37,6 @@
     </div>
 </div>
 <div>
-    Starte die Studie erst, wenn du alle Informationen erhalten hast <br> und du die Einverständniserklärung unterschrieben hast.
     <form id = "participant id">
         <div class="radioarray">
 
