improved details of product data

--- a/templates/interview.html
+++ b/templates/interview.html
@@ -37,8 +37,7 @@
 </div>
 <div>
     <article>
-        Vielen Dank für die Teilnahme an unserer Studie. Abschließend haben wir noch ein paar Fragen an dich. Danach
-        erhältst du deine Vergütung.
+        Abschließend haben wir noch ein paar Fragen an dich. Dazu führen wir ein kurzes Interview. Danach erhältst du deine Vergütung.
     </article>
     <label><input id="checkbox" type="checkbox"> Vergütung erhalten und bestätigt</label>
     <br>
