--- a/static/shop.css
+++ b/static/shop.css
@@ -8,13 +8,23 @@ html, body, .container{
 }
 
 .shopName {
+    display: flex;
+    flex-direction: row;
     overflow: hidden;
     background-color: #333;
 }
 
-.shopName div {
+.Title {
     color: #f2f2f2;
     text-align: center;
+    padding: 14px 16px;
+    font-size: xx-large;
+    width: 90%
+}
+
+.Timer {
+    color: #f2f2f2;
+    text-align: end;
     padding: 14px 16px;
     font-size: xx-large;
 }
