--- a/templates/decision.html
+++ b/templates/decision.html
@@ -24,7 +24,7 @@
             })
             socket.on('loadDecision', function (message) {
                 productSet = message['Set'];
-                timerId = loadData(socket)
+                timerId = loadData(socket,productSet)
                 return false;
             })
 
@@ -56,7 +56,7 @@
             });
         });
 
-        function loadData(socket) {
+        function loadData(socket, productSet) {
             $.getJSON('../static/data.json', function(data) {
                 //General Information
                 const products = data[productSet.toString()];
@@ -75,7 +75,7 @@
                 let timer = seconds.toString()
                 seconds < 10 ? timer = "0"+seconds.toString() : timer = seconds.toString();
                 document.getElementById("timer").innerHTML = "0:"+timer;
-                return setInterval(function(){
+                let timerId = setInterval(function(){
                     seconds= seconds-1;
                     seconds < 10 ? timer = "0"+seconds.toString() : timer = seconds.toString();
                     document.getElementById("timer").innerHTML = "0:"+timer;
@@ -85,6 +85,7 @@
                         socket.emit('shop', null)
                     }
                 },1000)
+                return timerId;
             });
         }
     </script>
