--- a/templates/description.html
+++ b/templates/description.html
@@ -36,8 +36,9 @@
 <div>
     <article>
         Die Freundin, für die du einkaufen sollst, ist eine 22-jährige Studentin. Sie ernährt sich vegan und versucht
-        stets Bio-Produkte zu kaufen. Da sie jedoch nicht sonderlich viel Geld zur Verfügung hat, achtet sie beim
-        Einkaufen auch immer auf den Preis der Artikel, die sie kauft.
+        stets Bio-Produkte zu kaufen. Außerdem achtet sie darauf, dass die Produkte, die Sie kauft, wenn möglich recyclebar
+        verpackt sind. Da sie jedoch nicht sonderlich viel Geld zur Verfügung hat, achtet sie beim Einkaufen auch immer
+        auf den Preis der Artikel, die sie kauft.
     </article>
     <button class = "startButton" id="next" type="button">Weiter</button> <br>
 </div>
