--- a/templates/task.html
+++ b/templates/task.html
@@ -41,10 +41,10 @@
         bekommen. Jedes dieser Produktsets enthält 5 Produkte und du musst dich für ein Produkt entscheiden, dass du
         kaufen würdest. Um zwischen den verschiedenen Produkten zu wechseln, kannst du die linke und rechte Pfeiltaste
         nutzen. Um ein Produkt auszuwählen, kannst du den Knopf "In den Einkaufswagen" auf der Seite des jeweiligen
-        Produkts drücken. Du hast jeweils 1 Minute Zeit, um deine Entscheidung zu treffen, hast du bis dahin kein
-        Produkt ausgewählt, erscheint automatisch eine Übersicht mit allen Produkten und du musst innerhalb von 10
-        Sekunden ein Produkt wählen. Danach erscheint ein Fenster, in dem du die nächste Entscheidung starten kannst.
-        Jeweils nach 10-15 Minuten werden wir eine kurze Pause einlegen. Die Pause wird auf diesem Fenster angekündigt.
+        Produkts drücken. Du hast jeweils 1 Minute Zeit, um deine Entscheidung zu treffen. Triffst du in dieser Zeit
+        keine Entscheidung, erscheint automatisch eine Übersicht mit allen Produkten. Triffst du deine Entscheidung erst
+        in der Übersicht wird sie als ungültig gewertet. Danach erscheint ein Fenster, in dem du die nächste Entscheidung
+        starten kannst. Jeweils nach 10-15 Minuten werden wir eine kurze Pause einlegen.
     </article>
     <button class = "startButton" id="start" type="button">Zur Beschreibung</button> <br>
 </div>
