--- a/templates/demographics.html
+++ b/templates/demographics.html
@@ -28,7 +28,17 @@
                                 if($("input[name='amountGroceriesOverall']:checked").size() > 0){
                                     if($("input[name='decisionTime']:checked").size() > 0){
                                         if($("input[name='visionCorrection']:checked").size() > 0){
-                                            socket.emit('task');
+                                            let message = {
+                                                "gender" : $("input[name='gender']:checked").val(),
+                                                "age" : $("input[name='age']").val(),
+                                                "job" : $("input[name='job']").val(),
+                                                "amountGroceriesOnline" : $("input[name='amountGroceriesOnline']:checked").val(),
+                                                "amountGroceriesOverall" : $("input[name='amountGroceriesOverall']:checked").val(),
+                                                "decisionTime" : $("input[name='decisionTime']:checked").val(),
+                                                "visionCorrection" : $("input[name='visionCorrection']:checked").val()
+                                            };
+
+                                            socket.emit('task', message);
                                             return false;
                                         }
                                     }
@@ -70,51 +80,49 @@
         <div class="radioarray">
             <b>Wie oft kaufst du Lebensmittel online?</b>
             <br>
-            <input type="radio" id="neverOl" name="amountGroceriesOnline" value="neverOl">
+            <input type="radio" id="neverOl" name="amountGroceriesOnline" value=0>
             <label for="neverOl">Nie</label>
-            <input type="radio" id="triedOl" name="amountGroceriesOnline" value="triedOl">
+            <input type="radio" id="triedOl" name="amountGroceriesOnline" value=1>
             <label for="triedOl">Bisher nur getestet</label>
-            <input type="radio" id="lessMonthOl" name="amountGroceriesOnline" value="lessMonthOl">
+            <input type="radio" id="lessMonthOl" name="amountGroceriesOnline" value=2>
             <label for="lessMonthOl">Weniger als einmal im Monat</label>
-            <input type="radio" id="1-3MonthOl" name="amountGroceriesOnline" value="1-3MonthOl">
+            <input type="radio" id="1-3MonthOl" name="amountGroceriesOnline" value=3>
             <label for="1-3MonthOl">1-3 mal im Monat</label>
-            <input type="radio" id="5-6WeekOl" name="amountGroceriesOnline" value="5-6WeekOl">
-            <label for="5-6WeekOl">5-6 mal in der Woche</label>
-            <input type="radio" id="3-4WeekOl" name="amountGroceriesOnline" value="3-4WeekOl">
-            <label for="3-4WeekOl">3-4 mal in der Woche</label>
-            <input type="radio" id="1-2WeekOl" name="amountGroceriesOnline" value="1-2WeekOl">
+            <input type="radio" id="1-2WeekOl" name="amountGroceriesOnline" value=4>
             <label for="1-2WeekOl">1-2 mal in der Woche</label>
+            <input type="radio" id="3-4WeekOl" name="amountGroceriesOnline" value=5>
+            <label for="3-4WeekOl">3-4 mal in der Woche</label>
+            <input type="radio" id="5-6WeekOl" name="amountGroceriesOnline" value=6>
+            <label for="5-6WeekOl">5-6 mal in der Woche</label>
         </div>
         <div class="radioarray">
             <b>Wie oft kaufst du Lebensmittel insgesamt?</b>
             <br>
-            <input type="radio" id="never" name="amountGroceriesOverall" value="never">
+            <input type="radio" id="never" name="amountGroceriesOverall" value=0>
             <label for="never">Nie</label>
-            <input type="radio" id="tried" name="amountGroceriesOverall" value="tried">
-            <label for="tried">Bisher nur getestet</label>
-            <input type="radio" id="lessMonth" name="amountGroceriesOverall" value="lessMonth">
+            <input type="radio" id="lessMonth" name="amountGroceriesOverall" value=1>
             <label for="lessMonth">Weniger als einmal im Monat</label>
-            <input type="radio" id="1-3Month" name="amountGroceriesOverall" value="1-3Month">
+            <input type="radio" id="1-3Month" name="amountGroceriesOverall" value=2>
             <label for="1-3Month">1-3 mal im Monat</label>
-            <input type="radio" id="5-6Week" name="amountGroceriesOverall" value="5-6Week">
-            <label for="5-6Week">5-6 mal in der Woche</label>
-            <input type="radio" id="3-4Week" name="amountGroceriesOverall" value="3-4Week">
-            <label for="3-4Week">3-4 mal in der Woche</label>
-            <input type="radio" id="1-2Week" name="amountGroceriesOverall" value="1-2Week">
+            <input type="radio" id="1-2Week" name="amountGroceriesOverall" value=3>
             <label for="1-2Week">1-2 mal in der Woche</label>
+            <input type="radio" id="3-4Week" name="amountGroceriesOverall" value=4>
+            <label for="3-4Week">3-4 mal in der Woche</label>
+            <input type="radio" id="5-6Week" name="amountGroceriesOverall" value=5>
+            <label for="5-6Week">5-6 mal in der Woche</label>
         </div>
         <div class="radioarray">
             <b>Nimmst du dir viel Zeit für Kaufentscheidungen?</b>
             <br>
-            <input type="radio" id="stronglyAgree" name="decisionTime" value="stronglyAgree">
+            <input type="radio" id="stronglyAgree" name="decisionTime" value=5>
             <label for="stronglyAgree">Trifft vollkommen zu</label>
-            <input type="radio" id="agree" name="decisionTime" value="agree">
+            <input type="radio" id="agree" name="decisionTime" value=4>
             <label for="agree">Trifft eher zu</label>
-            <input type="radio" id="neutral" name="decisionTime" value="neutral">
+            <input type="radio" id="neutral" name="decisionTime" value=3>
             <label for="neutral">Neutral</label>
-            <input type="radio" id="disagree" name="decisionTime" value="disagree">
+            <input type="radio" id="disagree" name="decisionTime" value=2>
             <label for="disagree">Trifft eher nicht zu</label>
-            <input type="radio" id="stronglyDisagree" name="decisionTime" value="stronglyDisagree">
+            <input type="radio" id="stronglyDisagree" name="decisionTime" value=1>
             <label for="stronglyDisagree">Trifft gar nicht zu</label>
         </div>
         <div class="radioarray">
